drop java 7 perm size option